@@ -13,6 +13,8 @@ Server Fixes:
 
 --Fixed updateGate so that error message doesn't divulge content leader email.
 
+--Support for Rode Rocket as cause of death in family tree server.
+
 
 
 Version 416   2024-April-21
